--- a/map.html
+++ b/map.html
@@ -3,10 +3,11 @@
     <head>
         <style>
             #map {
-                width: 500px;
-                height: 400px;
+                width: 100vw;
+                height: 50vw;
             }
         </style>
+        
         <script src="https://maps.googleapis.com/maps/api/js"></script>
         <script>
             function initialize() {
