--- a/map.html
+++ b/map.html
@@ -1,51 +1,13 @@
 <!DOCTYPE html>
     <html>
     <head>
-        <style>
-            #map {
-                width: 100vw;
-                height: 50vw;
-            }
-        </style>
-        
+        <meta charset="utf-8">
+        <title>PartyMap</title>
         <script src="https://maps.googleapis.com/maps/api/js"></script>
-        <script>
-            function initialize() {
-                var mapCanvas = document.getElementById('map');
-                var mapOptions = {
-                    center: new google.maps.LatLng(43.705342, -72.288601),
-                    zoom: 16,
-                    mapTypeId: google.maps.MapTypeId.ROADMAP
-                }
-                var map = new google.maps.Map(mapCanvas, mapOptions)
-            }
-            google.maps.event.addDomListener(window, 'load', initialize);
-        </script>
-            <meta charset="utf-8">
-            <meta http-equiv="X-UA-Compatible" content="IE=edge">
-            <title>Flask Google Maps Example</title>
-
-            <!-- Load jQuery (first tries google but uses static folder
-            as a backup)
-            <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-            <script>window.jQuery || document.write('<script src="{{
-            url_for('static', filename='jquery.js') }}">\x3C/script>')</script>
-             set global variable of url
-            <script type=text/javascript>
-                    $SCRIPT_ROOT = {{ request.script_root|tojson|safe }};
-            </script>
-
-            <link rel="stylesheet" href="">
-            {{"decoupled-map"|googlemap_js(43.704606, -72.287378, markers=[(43.704606, -72.287378)])}}
-            {{mymap.js}}
-            {{sndmap.js}}
-        -->
-
+        <script src="{{ url_for('static', filename='initmap.js') }}"></script>
+        <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}">
     </head>
     <body>
         <div id="map"></div>
-        <!--<h2> Second map generated in view</h2>
-        <h3> Example for different icons in multiple markers</h3>
-        {{sndmap.html}}-->
     </body>
 </html>
