--- a/map.html
+++ b/map.html
@@ -2,12 +2,113 @@
     <html>
     <head>
         <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>PartyMap</title>
+        <link rel="shortcut icon"
+            href="{{ url_for('static', filename='img/favicon.ico') }}">
         <script src="https://maps.googleapis.com/maps/api/js"></script>
-        <script src="{{ url_for('static', filename='initmap.js') }}"></script>
-        <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}">
+        <script src="{{ url_for('static', filename='js/initmap.js') }}"></script>
+        <link rel="stylesheet" type="text/css"
+            href="{{ url_for('static', filename='css/style.css') }}">
+        <link rel="stylesheet" type="text/css"
+            href="{{ url_for('static', filename='css/bootstrap.min.css')}}">
+	    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     </head>
     <body>
+        <div id="header" class="navbar navbar-default">
+    		<div class="container">
+
+    			<!-- <a class="navbar-brand" href="index.html">Partymap</a> -->
+    			<a class="navbar-brand" >
+            		<img style="max-width:150px; margin-top: -5px;" src="{{ url_for('static', filename='img/PartyMapIconLeftTextRightAlt4.png') }}">
+        		</a>
+
+        		<button class="navbar-toggle" data-toggle="collapse" data-target=".navHeaderCollapse">
+
+        			<span class="icon-bar"></span>
+        			<span class="icon-bar"></span>
+        			<span class="icon-bar"></span>
+
+        		</button>
+
+        		<div class="collapse navbar-collapse navHeaderCollapse" style="text-align: center">
+
+        			<ul class="nav navbar-nav navbar-right">
+
+        				<li><a href="#"><li><a href="#"><i class="fa fa-trophy"></i></i></a></li></a></li>
+
+        				<li><a href="#"><i class="fa fa-cutlery"></i></a></li>
+
+        				<li><a href="#"><i class="fa fa-beer"></i></a></li>
+
+        				<li><a href="#"><i class="fa fa-graduation-cap"></i></a></li>
+
+        				<li><a href="#"><i class="fa fa-comments"></i></a></li>
+
+
+        			</ul>
+
+        		</div>
+    		</div>
+    	</div>
         <div id="map"></div>
+
+    	<div id="footer" class="navbar navbar-default">
+
+        	<div class="container">
+
+        		<a href="#help" data-toggle="modal" class="navbar-btn btn-info btn pull-right"><i class="fa fa-info-circle"></i></a>
+
+        	</div>
+
+        </div>
+
+        <div class="modal fade" id="help" role="dialog">
+
+        	<div class="modal-dialog">
+
+        		<div class="modal-content">
+
+        			<div class="modal-header">
+
+        				<img style="max-width:250px;" src="{{ url_for('static', filename='img/PartyMapIconLeftTextRightAlt3.png') }}">
+
+        			</div>
+
+        			<div class="modal-body">
+
+        				<h4>Welcome to Partymap!</h4>
+        				<p>Looking for an event? You've come to the right place. Find out what's happening on your campus and see where it's going down. Partymap updates in real-time so you're never out of the loop.</p>
+        				<p>Partymap automatically logs your location when you check the site, and you can simply use the buttons in the navbar to tag your event.</p>
+        				<p>Partymap won't do the partying for you, but it'll make sure you never miss out again.</p>
+        				<p>Party on!</p>
+
+        			</div>
+
+        			<div class="modal-footer">
+        				<a class="btn btn-primary" data-dismiss="modal">Close</a>
+        			</div>
+
+        		</div>
+
+        	</div>
+
+        </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+	    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+	    <script src="{{ url_for('static', filename='js/bootstrap.min.js')}}"></script>
     </body>
 </html>
