--- a/map.html
+++ b/map.html
@@ -20,7 +20,7 @@
     		<div class="container">
 
     			<!-- <a class="navbar-brand" href="index.html">Partymap</a> -->
-    			<a class="navbar-brand" >
+    			<a class="navbar-brand">
             		<img style="max-width:150px; margin-top: -5px;" src="{{ url_for('static', filename='img/PartyMapIconLeftTextRightAlt4.png') }}">
         		</a>
 
@@ -59,6 +59,7 @@
         	<div class="container">
 
         		<a href="#help" data-toggle="modal" class="navbar-btn btn-info btn pull-right"><i class="fa fa-info-circle"></i></a>
+                <a class="navbar-btn btn-primary btn pull-left"><i class="fa fa-location-arrow"></i></a>
 
         	</div>
 
