Changed the javascript + html files so that when clicked, the location button recenters map to current location.

--- a/map.html
+++ b/map.html
@@ -59,7 +59,7 @@
         	<div class="container">
 
         		<a href="#help" data-toggle="modal" class="navbar-btn btn-info btn pull-right"><i class="fa fa-info-circle"></i></a>
-                <a class="navbar-btn btn-primary btn pull-left"><i class="fa fa-location-arrow"></i></a>
+                <a onclick="recenterLoc()" class="navbar-btn btn-primary btn pull-left"><i class="fa fa-location-arrow"></i></a>
 
         	</div>
 
